k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: devops-demo
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels: 
      app: devops-demo
  template:
    metadata:
      labels:
        env: devops-demo
    spec:
      containers:
        - name: devops-demo
          image: image_url
          ports:
            - containerPort: 8000
