k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo
spec:
  selector:
    app: devops-demo
  ports:
    - Port: 80
      targetPort: 8000
