k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-demo
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - http:
    paths:
    - path: /
      pathType: Prefix
      backend:
        service:
          name: devops-demo
          port:
            number: 80
